--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-<!-- <script src="/Objetos.js"></script> -->
+<script src="/Objetos.js"></script>
 <script src="/Array.js"></script>
 </body>
 </html>
